<resources>
    <string name="app_name">WeatherHere</string>
    <string name="application_name">WeatherHere</string>
    <string name="enable_fingerprint">enable fingerprint</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="et_enter_the_country">enter the country name</string>
    <string name="air_pressure">Air Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="wind_direction">Wind direction</string>
    <string name="wind_speed">Wind speed</string>
    <string name="temperature">Temperature</string>
    <string name="submit">submit</string>
    <string name="google_maps_key">AIzaSyAO5MXcgQHeiv-xiWcsFlKVCXFaHJkuX1w</string>
</resources>
