<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="weatherViewModel"
            type="com.example.weatherhere.weatherDetails.WeatherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".weatherDetails.WeatherFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/common_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_rawRes="@raw/back_arrow"
            app:lottie_autoPlay="true"
            android:onClick="@{(view) -> weatherViewModel.onClickBackButton()}"
            app:lottie_loop="true"
            android:layout_marginLeft="@dimen/common_16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_16dp"
            android:layout_marginStart="@dimen/common_16dp"
            android:layout_marginEnd="@dimen/common_16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/air_pressure"
            android:textColor="#000"
            app:layout_constraintBottom_toTopOf="@id/cardV1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            app:cardElevation="2dp"
            android:id="@+id/cardV1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/common_16dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="@dimen/common_16dp"
            app:cardBackgroundColor="#0000"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@={weatherViewModel.airPressureLiveData}"
                android:textColor="#000" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:textColor="#000"
            android:id="@+id/humidity_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_16dp"
            android:layout_marginStart="@dimen/common_16dp"
            android:layout_marginTop="@dimen/common_16dp"
            android:layout_marginEnd="@dimen/common_16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/humidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardV1" />

        <androidx.cardview.widget.CardView
            app:cardElevation="2dp"
            android:id="@+id/cardV2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/common_16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="@dimen/common_16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/humidity_tv">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@={weatherViewModel.humidityLiveData}"
                android:textColor="#000" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/temp_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_16dp"
            android:layout_marginStart="@dimen/common_16dp"
            android:layout_marginTop="@dimen/common_16dp"
            android:layout_marginEnd="@dimen/common_16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/temperature"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardV2" />

        <androidx.cardview.widget.CardView
            app:cardElevation="2dp"
            android:id="@+id/cardV3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/common_16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="@dimen/common_16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temp_tv">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@={weatherViewModel.temperatureLiveData}"
                android:textColor="#000" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/visibility_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_16dp"
            android:layout_marginStart="@dimen/common_16dp"
            android:layout_marginTop="@dimen/common_16dp"
            android:layout_marginEnd="@dimen/common_16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/visibility"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardV3" />

        <androidx.cardview.widget.CardView
            app:cardElevation="2dp"
            android:id="@+id/cardV4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/common_16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="@dimen/common_16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/visibility_tv">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@={weatherViewModel.visibilityLiveData}"
                android:textColor="#000" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/wind_direction_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_16dp"
            android:layout_marginStart="@dimen/common_16dp"
            android:layout_marginTop="@dimen/common_16dp"
            android:layout_marginEnd="@dimen/common_16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/wind_direction"
            android:textColor="#000"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardV4" />

        <androidx.cardview.widget.CardView
            app:cardElevation="2dp"
            android:id="@+id/cardV5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="@dimen/common_16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="@dimen/common_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wind_direction_tv">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@={weatherViewModel.windDirectionLiveData}"
                android:textColor="#000" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/wind_speed_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_16dp"
            android:layout_marginStart="@dimen/common_16dp"
            android:layout_marginTop="@dimen/common_16dp"
            android:layout_marginEnd="@dimen/common_16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/wind_speed"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardV5" />

        <androidx.cardview.widget.CardView
            app:cardElevation="2dp"
            android:id="@+id/cardV6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/common_16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="@dimen/common_16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wind_speed_tv">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@={weatherViewModel.windSpeedLiveData}"
                android:textColor="#000" />
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>